--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
       </section>
 
       <section class="header-content">
-        <div class="header-content__item">
+        <div class="header-content__icon">
           <img src="./assets/home.svg" alt="home" />
         </div>
         <div class="header-content__item">
           <select class="select-custom">
             <option selected>Bussiness</option>
-            <option >Company</option>
-            <option >ESG</option>
-            <option >News</option>
+            <option>Company</option>
+            <option>ESG</option>
+            <option>News</option>
           </select>
         </div>
         <div class="header-content__item">
@@ -101,7 +101,84 @@
             <option selected>전력</option>
           </select>
         </div>
+
+        <div class="header-content__icon_share">
+          <img src="./assets/share.svg" alt="" />
+        </div>
       </section>
+
+      <section class="extra-hight">
+        <div class="extra-hight__title">
+          <h1 class="fs--46 fw--700">초고압 케이블</h1>
+          <div class="extra-hight__select">
+            <div class="extra-hight-warper">
+              <div class="extra-hight-warper__item">
+                전력
+                <i class="fa-solid fa-chevron-right"></i>
+              </div>
+              <div class="extra-hight-warper__item">
+                카탈로그·지명원
+                <i class="fa-solid fa-download"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="product">
+        <h1 class="fw--700">케이블</h1>
+        <div class="product-list">
+          <div class="product-list__item">
+            <img src="./assets/XLPE.png" alt="" />
+            <p>초고압 XLPE 케이블</p>
+          </div>
+          <div class="product-list__item">
+            <img src="./assets/OF.png" alt="" />
+            <p>초고압 OF 케이블</p>
+          </div>
+          <div class="product-list__item">
+            <img src="./assets/HVDC.png" alt="" />
+            <p>초고압 직류 케이블 (HVDC)</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="product">
+        <h1 class="fw--700">접속재</h1>
+        <div class="product-list">
+          <div class="product-list__item">
+            <img src="./assets/XLPEmate.png" alt="" />
+            <p>초고압  XLPE 케이블 접속재</p>
+          </div>
+          <div class="product-list__item">
+            <img src="./assets/OFmate.png" alt="" />
+            <p>초고압 OF 케이블 접속재</p>
+          </div>
+          <div class="product-list__item">
+            <img src="./assets/other.png" alt="" />
+            <p>기타 초고압 케이블 접속재</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="releted-content">
+        <h1 class="fw--700">연관 콘텐츠</h1>
+        <div class="product-list">
+          <div class="product-list__item">
+            <img src="./assets/XLPEmate.png" alt="" />
+            <p>초고압  XLPE 케이블 접속재</p>
+          </div>
+          <div class="product-list__item">
+            <img src="./assets/OFmate.png" alt="" />
+            <p>초고압 OF 케이블 접속재</p>
+          </div>
+          <div class="product-list__item">
+            <img src="./assets/other.png" alt="" />
+            <p>기타 초고압 케이블 접속재</p>
+          </div>
+        </div>
+      </section>
+
     </main>
   </body>
 
