--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
         <div class="fixed-menu__item active">
           <img src="./assets/Q&A.png" />
         </div>
+        <div class="fixed-menu__item scroll-top" id="divScrollTop">
+          <i class="fa-solid fa-arrow-up"></i>
+          TOP
+        </div>
       </section>
 
       <section class="header-content">
@@ -148,7 +152,7 @@
         <div class="product-list">
           <div class="product-list__item">
             <img src="./assets/XLPEmate.png" alt="" />
-            <p>초고압  XLPE 케이블 접속재</p>
+            <p>초고압 XLPE 케이블 접속재</p>
           </div>
           <div class="product-list__item">
             <img src="./assets/OFmate.png" alt="" />
@@ -166,7 +170,7 @@
         <div class="product-list">
           <div class="product-list__item">
             <img src="./assets/XLPEmate.png" alt="" />
-            <p>초고압  XLPE 케이블 접속재</p>
+            <p>초고압 XLPE 케이블 접속재</p>
           </div>
           <div class="product-list__item">
             <img src="./assets/OFmate.png" alt="" />
@@ -178,16 +182,94 @@
           </div>
         </div>
       </section>
-
     </main>
-  </body>
 
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"
-  ></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-  <script src="./js/main.js"></script> -->
+    <footer>
+      <div class="footer-widgets">
+        <div class="widget-item">
+          <h1>Company</h1>
+          <div class="widget-item__content">
+            <a href="#">개요</a>
+            <a href="#">역사</a>
+            <a href="#">CI</a>
+            <a href="#">R&D</a>
+            <a href="#">인재경영</a>
+          </div>
+        </div>
+        <div class="widget-item">
+          <h1>Business</h1>
+          <div class="widget-item__content">
+            <a href="#">제품</a>
+            <a href="#">솔루션</a>
+            <a href="#">성공사례</a>
+            <a href="#">R&글로벌 네트워크</a>
+          </div>
+        </div>
+        <div class="widget-item">
+          <h1>ESG</h1>
+          <div class="widget-item__content">
+            <a href="#">ESG 경영</a>
+            <a href="#">환경</a>
+            <a href="#">사회</a>
+            <a href="#">지배구조</a>
+            <a href="#">윤리경영</a>
+            <a href="#">공정거래 자율준수</a>
+            <a href="#">사이버 신문고</a>
+          </div>
+        </div>
+        <div class="widget-item">
+          <h1>News</h1>
+          <div class="widget-item__content">
+            <a href="#">IR</a>
+            <a href="#">PR</a>
+          </div>
+        </div>
+        <div class="widget-item">
+          <h1>Customer</h1>
+          <div class="widget-item__content">
+            <a href="#">고객문의</a>
+            <a href="#">자료실</a>
+            <a href="#"
+              >B2B <i class="fa fa-external-link" aria-hidden="true"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-container">
+        <div>
+          <a class="footer-container__image" href="/"
+            ><img src="./assets/logo.svg" alt="logo"
+          /></a>
+        </div>
+
+        <div>
+          <div class="footer-container__title">
+            <h1>개인정보처리방침</h1>
+            <h1>이메일 무단 수집 거부</h1>
+            <h1>사이버 신문고</h1>
+          </div>
+          <div class="footer-container__description">
+            <p>
+              [서울 사옥] 서울특별시 서초구 양재대로2길 18 호반파크 2관 | [안양
+              본점] 경기도 안양시 동안구 시민대로 317 대한스마트타워 | 대표번호
+              : 02-316-9114
+            </p>
+            <p>
+              COPYRIGHT ⓒ 2022 taihan Cable & Solution Co., Ltd. ALL RIGHT
+              RESERVED
+            </p>
+          </div>
+        </div>
+        <form class="footer-container__form">
+          <div class="select-wrapper">
+            <select>
+              <option selected>Family Sites</option>
+            </select>
+          </div>
+        </form>
+      </div>
+    </footer>
+    <script src="./index.js"></script>
+  </body>
 </html>
