--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="product-list">
           <div class="product-list__item">
             <img src="./assets/XLPEmate.png" alt="" />
-            <p>초고압  XLPE 케이블 접속재</p>
+            <p>초고압 XLPE 케이블 접속재</p>
           </div>
           <div class="product-list__item">
             <img src="./assets/OFmate.png" alt="" />
@@ -165,20 +165,56 @@
         <h1 class="fw--700">연관 콘텐츠</h1>
         <div class="product-list">
           <div class="product-list__item">
-            <img src="./assets/XLPEmate.png" alt="" />
-            <p>초고압  XLPE 케이블 접속재</p>
+            <img src="./assets/chinoHill.png" alt="" />
+            <div class="product-list__item__success">
+              <p>Success Story</p>
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
+            <p>초고압 XLPE 케이블 접속재</p>
           </div>
           <div class="product-list__item">
-            <img src="./assets/OFmate.png" alt="" />
+            <img src="./assets/ndc199.png" alt="" />
+            <div class="product-list__item__success">
+              <p>Success Story</p>
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
             <p>초고압 OF 케이블 접속재</p>
           </div>
           <div class="product-list__item">
-            <img src="./assets/other.png" alt="" />
+            <img src="./assets/powering.png" alt="" />
+            <div class="product-list__item__success">
+              <p>Success Story</p>
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
             <p>기타 초고압 케이블 접속재</p>
           </div>
         </div>
       </section>
 
+      <section class="related-solution">
+        <div class="related-solution__title">
+          <h1>관련 솔루션</h1>
+          <div class="related-solution__title__right">1/5</div>
+        </div>
+        <div class="related-solution__list">
+          <div class="related-solution__list__item">
+            <img src="./assets/powering.png" alt="" />
+            <p>전력송배전</p>
+            <i class="fa-solid fa-chevron-right"></i>
+          </div>
+          <div class="related-solution__list__item">
+            <img src="./assets/powering.png" alt="" />
+            <p>신재생 에너지</p>
+            <i class="fa-solid fa-chevron-right"></i>
+          </div>
+          <div class="related-solution__list__item">
+            <img src="./assets/powering.png" alt="" />
+            <p>플랜트</p>
+            <i class="fa-solid fa-chevron-right"></i>
+          </div>
+        </div>
+        
+      </section>
     </main>
   </body>
 
