--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     </header>
 
     <main>
+      <!-- fixed-menu -->
       <section class="fixed-menu">
         <div class="fixed-menu__item">
           <img src="./assets/usb.png" />
@@ -94,7 +95,9 @@
           TOP
         </div>
       </section>
+      <!-- fixed-menu -->
 
+      <!-- header-content -->
       <section class="header-content">
         <div class="header-content__icon">
           <img src="./assets/home.svg" alt="home" />
@@ -122,7 +125,9 @@
           <img src="./assets/share.svg" alt="" />
         </div>
       </section>
+      <!-- header-content -->
 
+      <!-- extra-banner -->
       <section class="extra">
         <div class="extra-hight">
           <div class="extra-hight__title">
@@ -153,7 +158,10 @@
           </p>
         </div>
       </section>
+      <!-- extra-banner -->
 
+
+      <!-- product-list -->
       <section class="product">
         <h1 class="fw--700">케이블</h1>
         <div class="product-list">
@@ -189,7 +197,9 @@
           </div>
         </div>
       </section>
+      <!-- product-list -->
 
+      <!-- releted-content -->
       <section class="releted-content">
         <div class="releted-content__title">
           <h1 class="fw--700">연관 콘텐츠</h1>
@@ -265,27 +275,40 @@
           </div>
         </div>
       </section>
+       <!-- releted-content -->
 
+       <!-- related-solution -->
       <section class="related-solution">
-        <div class="related-solution__title">
-          <h1>관련 솔루션</h1>
-          <div class="related-solution__title__right">1/5</div>
-        </div>
-        <div class="related-solution__list">
-          <div class="related-solution__list__item">
-            <img src="./assets/powering.png" alt="" />
-            <p>전력송배전</p>
-            <i class="fa-solid fa-chevron-right"></i>
+        <div class="related-solution__content">
+          <div class="related-solution__head">
+            <h1>관련 솔루션</h1>
+
+            <div class="related-solution__head__extra">
+              <button class="btn-paging">
+                <i class="fa-solid fa-angle-left"></i>
+              </button>
+              <span class="page-text">1/5</span>
+              <button class="btn-paging">
+                <i class="fa-solid fa-angle-right"></i>
+              </button>
+            </div>
           </div>
-          <div class="related-solution__list__item">
-            <img src="./assets/powering.png" alt="" />
-            <p>신재생 에너지</p>
-            <i class="fa-solid fa-chevron-right"></i>
-          </div>
-          <div class="related-solution__list__item">
-            <img src="./assets/powering.png" alt="" />
-            <p>플랜트</p>
-            <i class="fa-solid fa-chevron-right"></i>
+          <div class="related-solution__list">
+            <div class="related-solution__list__item">
+              <img src="./assets/power.png" alt="" />
+              <p>전력송배전</p>
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
+            <div class="related-solution__list__item">
+              <img src="./assets/renewable.png" alt="" />
+              <p>신재생 에너지</p>
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
+            <div class="related-solution__list__item">
+              <img src="./assets/plant.png" alt="" />
+              <p>플랜트</p>
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
           </div>
         </div>
 
@@ -312,6 +335,8 @@
           </div>
         </div>
       </section>
+       <!-- related-solution -->
+
     </main>
 
     <footer>
