--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
         <div class="releted-content__title">
           <h1 class="fw--700">연관 콘텐츠</h1>
           <div class="releted-content__title__extra">
-            <button class="btn-paging">
+            <button class="btn-paging swiper-button-next">
               <i class="fa-solid fa-angle-left"></i>
             </button>
-            <span class="page-text">1/5</span>
-            <button class="btn-paging">
+            <span class="page-text swiper-pagination"></span>
+            <button class="btn-paging swiper-button-prev">
               <i class="fa-solid fa-angle-right"></i>
             </button>
           </div>
@@ -252,7 +252,7 @@
                     <p>Success Story</p>
                     <i class="fa-solid fa-chevron-right"></i>
                   </div>
-                  <p>초고압 XLPE 케이블 접속재</p>
+                  <p>초고압 XLPE 케이블 접속재 1</p>
                 </div>
                 <div class="product-list__item">
                   <img src="./assets/ndc199.png" alt="" />
@@ -260,7 +260,7 @@
                     <p>Success Story</p>
                     <i class="fa-solid fa-chevron-right"></i>
                   </div>
-                  <p>초고압 OF 케이블 접속재</p>
+                  <p>초고압 OF 케이블 접속재 1</p>
                 </div>
                 <div class="product-list__item">
                   <img src="./assets/powering.png" alt="" />
@@ -268,7 +268,7 @@
                     <p>Success Story</p>
                     <i class="fa-solid fa-chevron-right"></i>
                   </div>
-                  <p>기타 초고압 케이블 접속재</p>
+                  <p>기타 초고압 케이블 접속재 1</p>
                 </div>
               </div>
             </div>
